# explorations

./: .gitignore  README.md  deploy.md  macOS.gitignore  updates.txt
.lsp/: sqlite.5.db
ai-tools-playground/: README.md
ai-tools-playground/first_ollama/: README.md  color_grid.py  main.py  ollama_client.py  prompt.txt  pyproject.toml
aiortc-server-example/: README.md  docker-compose.yml  server.py
art_of_software_testing/: Gemfile  Guardfile  Makefile  README.md
brautopy/: Dockerfile  README.md  docker-compose.yml
bundler_open/: Dockerfile  README.md
c/: Dockerfile  Makefile  README.md  hello_world.c
classes_are_closures/: classes_are_clojures.rb
clickhouse/: .gitignore  README.md  docker-compose.yml
clojure/: README.md
computation/: README.md  simple.rb
conda_docker/: .env
css/: README.md  fill_element_with_grid.css  fill_element_with_grid.html
declarative_queue_infra/: README.md
devploy/: .env  Dockerfile  Makefile  README.md  docker-compose.yml
distributed_systems/: design_patterns_fowler.md
docker_conda/: README.md  docker-compose.yml
docker_gpu/: Dockerfile  README.md  build_and_run.sh  is_gpu_available.py  quickstart.py
elm/: Dockerfile  README.md  elm.json  entrypoint.sh  index.html  package-lock.json
failover/: Dockerfile  README.md  docker-compose.yml
github_ci_cd/: README.md
go/: README.md  auto_reload_tools.md  concurrency.md  interfaces.md
howl-demo/: Dockerfile  README.md  demo.py  docker-compose.yml  requirements.txt
k8s_jenkins/: README.md
kafka/: exactly_once_semantics.md  how_to_partition_data.md
(+275 files in other folders)
