[project]
name = "first-ollama"
version = "0.1.0"
description = ""
authors = [
    { name = "Mikhail Golubitsky", email = "mikhailgolubitsky@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests (>=2.32.4,<3.0.0)", "colorama (>=0.4.6,<0.5.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
